Fix grid alignment & replace dummy text

--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -22,7 +22,7 @@
     grid-area: articles;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: auto;
+    align-content: start;
     gap: 25px;
 
     &__main-heading {
