--- a/styles.css
+++ b/styles.css
@@ -649,7 +649,7 @@ ul, ol {
   grid-area: articles;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: auto;
+  align-content: start;
   gap: 25px;
 }
 .content-articles__main-heading {
